fodtlmon/parser/FODTLParser.py
# Generated from FODTL.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class FODTLParser ( Parser ):

    grammarFileName = "FODTL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'r'", "<INVALID>", 
                     "'&'", "'|'", "<INVALID>", "'G'", "'X'", "'F'", "'U'", 
                     "'R'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'['", "']'", "'.'", "':'", "'='", "','", 
                     "'''", "'?'", "'!'", "'@'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "O_not", "O_and", "O_or", "O_imply", "O_always", "O_next", 
                      "O_future", "O_until", "O_release", "O_next_n", "ID", 
                      "INT", "NEWLINE", "WS", "BLANK", "STRING", "COMMENT", 
                      "H_lpar", "H_rpar", "H_lbar", "H_rbar", "H_dot", "H_colon", 
                      "H_equal", "H_comma", "H_quote", "H_qmark", "H_emark", 
                      "H_at" ]

    RULE_true = 0
    RULE_false = 1
    RULE_main = 2
    RULE_formula = 3
    RULE_predicate = 4
    RULE_arg = 5
    RULE_variable = 6
    RULE_constant = 7
    RULE_regexp = 8
    RULE_negation = 9
    RULE_utOperators = 10
    RULE_btOperators = 11
    RULE_vartype = 12
    RULE_vardec = 13
    RULE_uQuant = 14
    RULE_eQuant = 15
    RULE_remote = 16

    ruleNames =  [ "true", "false", "main", "formula", "predicate", "arg", 
                   "variable", "constant", "regexp", "negation", "utOperators", 
                   "btOperators", "vartype", "vardec", "uQuant", "eQuant", 
                   "remote" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    O_not=4
    O_and=5
    O_or=6
    O_imply=7
    O_always=8
    O_next=9
    O_future=10
    O_until=11
    O_release=12
    O_next_n=13
    ID=14
    INT=15
    NEWLINE=16
    WS=17
    BLANK=18
    STRING=19
    COMMENT=20
    H_lpar=21
    H_rpar=22
    H_lbar=23
    H_rbar=24
    H_dot=25
    H_colon=26
    H_equal=27
    H_comma=28
    H_quote=29
    H_qmark=30
    H_emark=31
    H_at=32

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class TrueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FODTLParser.RULE_true

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrue" ):
                listener.enterTrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrue" ):
                listener.exitTrue(self)




    def true(self):

        localctx = FODTLParser.TrueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_true)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(FODTLParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FalseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FODTLParser.RULE_false

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalse" ):
                listener.enterFalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalse" ):
                listener.exitFalse(self)




    def false(self):

        localctx = FODTLParser.FalseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_false)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(FODTLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formula(self):
            return self.getTypedRuleContext(FODTLParser.FormulaContext,0)


        def getRuleIndex(self):
            return FODTLParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = FODTLParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.formula(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def true(self):
            return self.getTypedRuleContext(FODTLParser.TrueContext,0)


        def false(self):
            return self.getTypedRuleContext(FODTLParser.FalseContext,0)


        def predicate(self):
            return self.getTypedRuleContext(FODTLParser.PredicateContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(FODTLParser.NEWLINE)
            else:
                return self.getToken(FODTLParser.NEWLINE, i)

        def negation(self):
            return self.getTypedRuleContext(FODTLParser.NegationContext,0)


        def uQuant(self):
            return self.getTypedRuleContext(FODTLParser.UQuantContext,0)


        def formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FODTLParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FODTLParser.FormulaContext,i)


        def eQuant(self):
            return self.getTypedRuleContext(FODTLParser.EQuantContext,0)


        def utOperators(self):
            return self.getTypedRuleContext(FODTLParser.UtOperatorsContext,0)


        def H_lpar(self):
            return self.getToken(FODTLParser.H_lpar, 0)

        def H_rpar(self):
            return self.getToken(FODTLParser.H_rpar, 0)

        def remote(self):
            return self.getTypedRuleContext(FODTLParser.RemoteContext,0)


        def O_and(self):
            return self.getToken(FODTLParser.O_and, 0)

        def O_or(self):
            return self.getToken(FODTLParser.O_or, 0)

        def O_imply(self):
            return self.getToken(FODTLParser.O_imply, 0)

        def btOperators(self):
            return self.getTypedRuleContext(FODTLParser.BtOperatorsContext,0)


        def getRuleIndex(self):
            return FODTLParser.RULE_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormula" ):
                listener.enterFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormula" ):
                listener.exitFormula(self)



    def formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = FODTLParser.FormulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_formula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            token = self._input.LA(1)
            if token in [FODTLParser.T__0]:
                self.state = 41
                self.true()

            elif token in [FODTLParser.T__1]:
                self.state = 42
                self.false()

            elif token in [FODTLParser.ID]:
                self.state = 43
                self.predicate()
                self.state = 47
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 44
                        self.match(FODTLParser.NEWLINE) 
                    self.state = 49
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)


            elif token in [FODTLParser.O_not]:
                self.state = 50
                self.negation()
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 51
                        self.match(FODTLParser.NEWLINE) 
                    self.state = 56
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)


            elif token in [FODTLParser.H_emark]:
                self.state = 57
                self.uQuant()
                self.state = 58
                self.formula(0)
                self.state = 62
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 59
                        self.match(FODTLParser.NEWLINE) 
                    self.state = 64
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)


            elif token in [FODTLParser.H_qmark]:
                self.state = 65
                self.eQuant()
                self.state = 66
                self.formula(0)
                self.state = 70
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 67
                        self.match(FODTLParser.NEWLINE) 
                    self.state = 72
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)


            elif token in [FODTLParser.O_always, FODTLParser.O_next, FODTLParser.O_future, FODTLParser.O_next_n]:
                self.state = 73
                self.utOperators()
                self.state = 74
                self.formula(0)
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 75
                        self.match(FODTLParser.NEWLINE) 
                    self.state = 80
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)


            elif token in [FODTLParser.H_lpar]:
                self.state = 81
                self.match(FODTLParser.H_lpar)
                self.state = 82
                self.formula(0)
                self.state = 83
                self.match(FODTLParser.H_rpar)
                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 84
                        self.match(FODTLParser.NEWLINE) 
                    self.state = 89
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)


            elif token in [FODTLParser.H_at]:
                self.state = 90
                self.remote()

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 123
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = FODTLParser.FormulaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 93
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 97
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==FODTLParser.NEWLINE:
                            self.state = 94
                            self.match(FODTLParser.NEWLINE)
                            self.state = 99
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 100
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FODTLParser.O_and) | (1 << FODTLParser.O_or) | (1 << FODTLParser.O_imply))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 104
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==FODTLParser.NEWLINE:
                            self.state = 101
                            self.match(FODTLParser.NEWLINE)
                            self.state = 106
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 107
                        self.formula(0)
                        self.state = 111
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt==1:
                                self.state = 108
                                self.match(FODTLParser.NEWLINE) 
                            self.state = 113
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                        pass

                    elif la_ == 2:
                        localctx = FODTLParser.FormulaContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_formula)
                        self.state = 114
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 115
                        self.btOperators()
                        self.state = 116
                        self.formula(0)
                        self.state = 120
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt==1:
                                self.state = 117
                                self.match(FODTLParser.NEWLINE) 
                            self.state = 122
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                        pass

             
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class PredicateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FODTLParser.ID, 0)

        def H_lpar(self):
            return self.getToken(FODTLParser.H_lpar, 0)

        def H_rpar(self):
            return self.getToken(FODTLParser.H_rpar, 0)

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FODTLParser.ArgContext)
            else:
                return self.getTypedRuleContext(FODTLParser.ArgContext,i)


        def H_comma(self, i:int=None):
            if i is None:
                return self.getTokens(FODTLParser.H_comma)
            else:
                return self.getToken(FODTLParser.H_comma, i)

        def getRuleIndex(self):
            return FODTLParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)




    def predicate(self):

        localctx = FODTLParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_predicate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(FODTLParser.ID)
            self.state = 141
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 129
                self.match(FODTLParser.H_lpar)
                self.state = 138
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FODTLParser.T__2) | (1 << FODTLParser.ID) | (1 << FODTLParser.H_quote))) != 0):
                    self.state = 130
                    self.arg()
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==FODTLParser.H_comma:
                        self.state = 131
                        self.match(FODTLParser.H_comma)
                        self.state = 132
                        self.arg()
                        self.state = 137
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 140
                self.match(FODTLParser.H_rpar)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(FODTLParser.VariableContext,0)


        def constant(self):
            return self.getTypedRuleContext(FODTLParser.ConstantContext,0)


        def regexp(self):
            return self.getTypedRuleContext(FODTLParser.RegexpContext,0)


        def predicate(self):
            return self.getTypedRuleContext(FODTLParser.PredicateContext,0)


        def getRuleIndex(self):
            return FODTLParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)




    def arg(self):

        localctx = FODTLParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arg)
        try:
            self.state = 147
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.variable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.constant()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.regexp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.predicate()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FODTLParser.ID, 0)

        def getRuleIndex(self):
            return FODTLParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = FODTLParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(FODTLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def H_quote(self, i:int=None):
            if i is None:
                return self.getTokens(FODTLParser.H_quote)
            else:
                return self.getToken(FODTLParser.H_quote, i)

        def ID(self):
            return self.getToken(FODTLParser.ID, 0)

        def INT(self):
            return self.getToken(FODTLParser.INT, 0)

        def getRuleIndex(self):
            return FODTLParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)




    def constant(self):

        localctx = FODTLParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(FODTLParser.H_quote)
            self.state = 152
            _la = self._input.LA(1)
            if not(_la==FODTLParser.ID or _la==FODTLParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 153
            self.match(FODTLParser.H_quote)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(FODTLParser.STRING, 0)

        def getRuleIndex(self):
            return FODTLParser.RULE_regexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegexp" ):
                listener.enterRegexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegexp" ):
                listener.exitRegexp(self)




    def regexp(self):

        localctx = FODTLParser.RegexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_regexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(FODTLParser.T__2)
            self.state = 156
            self.match(FODTLParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NegationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_not(self):
            return self.getToken(FODTLParser.O_not, 0)

        def formula(self):
            return self.getTypedRuleContext(FODTLParser.FormulaContext,0)


        def getRuleIndex(self):
            return FODTLParser.RULE_negation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegation" ):
                listener.enterNegation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegation" ):
                listener.exitNegation(self)




    def negation(self):

        localctx = FODTLParser.NegationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_negation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(FODTLParser.O_not)
            self.state = 159
            self.formula(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UtOperatorsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_always(self):
            return self.getToken(FODTLParser.O_always, 0)

        def O_next(self):
            return self.getToken(FODTLParser.O_next, 0)

        def O_future(self):
            return self.getToken(FODTLParser.O_future, 0)

        def O_next_n(self):
            return self.getToken(FODTLParser.O_next_n, 0)

        def getRuleIndex(self):
            return FODTLParser.RULE_utOperators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUtOperators" ):
                listener.enterUtOperators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUtOperators" ):
                listener.exitUtOperators(self)




    def utOperators(self):

        localctx = FODTLParser.UtOperatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_utOperators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FODTLParser.O_always) | (1 << FODTLParser.O_next) | (1 << FODTLParser.O_future) | (1 << FODTLParser.O_next_n))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BtOperatorsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_until(self):
            return self.getToken(FODTLParser.O_until, 0)

        def O_release(self):
            return self.getToken(FODTLParser.O_release, 0)

        def getRuleIndex(self):
            return FODTLParser.RULE_btOperators

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBtOperators" ):
                listener.enterBtOperators(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBtOperators" ):
                listener.exitBtOperators(self)




    def btOperators(self):

        localctx = FODTLParser.BtOperatorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_btOperators)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            _la = self._input.LA(1)
            if not(_la==FODTLParser.O_until or _la==FODTLParser.O_release):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VartypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FODTLParser.ID, 0)

        def getRuleIndex(self):
            return FODTLParser.RULE_vartype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVartype" ):
                listener.enterVartype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVartype" ):
                listener.exitVartype(self)




    def vartype(self):

        localctx = FODTLParser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_vartype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(FODTLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FODTLParser.ID, 0)

        def H_colon(self):
            return self.getToken(FODTLParser.H_colon, 0)

        def vartype(self):
            return self.getTypedRuleContext(FODTLParser.VartypeContext,0)


        def getRuleIndex(self):
            return FODTLParser.RULE_vardec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardec" ):
                listener.enterVardec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardec" ):
                listener.exitVardec(self)




    def vardec(self):

        localctx = FODTLParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_vardec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(FODTLParser.ID)
            self.state = 168
            self.match(FODTLParser.H_colon)
            self.state = 169
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UQuantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def H_emark(self):
            return self.getToken(FODTLParser.H_emark, 0)

        def H_lbar(self):
            return self.getToken(FODTLParser.H_lbar, 0)

        def H_rbar(self):
            return self.getToken(FODTLParser.H_rbar, 0)

        def vardec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FODTLParser.VardecContext)
            else:
                return self.getTypedRuleContext(FODTLParser.VardecContext,i)


        def getRuleIndex(self):
            return FODTLParser.RULE_uQuant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUQuant" ):
                listener.enterUQuant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUQuant" ):
                listener.exitUQuant(self)




    def uQuant(self):
